project(Fenetre_Ajout LANGUAGES CXX)
cmake_minimum_required(VERSION 3.1.0)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_EXTENSIONS off)

find_package(Qt5Widgets REQUIRED)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    add_compile_options(-Wall -Wpedantic)
endif()
add_executable(Fuite_de_criminels Source/Main.cpp Source/Fenetre_Ajout.cc Source/Fenetre_Jeu.cc Source/Entites.cc Source/Jeu.cc)
target_link_libraries(Fenetre_Ajout Qt5::Widgets)
